--- a/ProjetosPraticos/Car Repair and Services/style.css
+++ b/ProjetosPraticos/Car Repair and Services/style.css
@@ -1,7 +1,8 @@
 /*
-    A PÁGINA ORIGINAL FOI DESENVOLVIDA PELO SITE NICEPAGE. TENTEI CRIAR A MINHA PÁGINA
-    DE FORMA PARECIDA COM A ORIGINAL, MAS, ADICIONANDO ALGUMAS ALTERAÇÕES. LINK PÁGINA 
-    ORIGINAL: https://nicepage.com/sf/75480/car-repair-website-builder-software
+    Tentei recriar a página semelhante à pagina original. Adicionei algumas alterações. Desenvolvi a maior parte da minha página sem olhar o 
+    código da página original, fiz dessa forma para fixar melhor o aprendizado. A página não é responsiva, foi usei a resolução 1366 x 768 
+    como base. Futuramente adicionarei melhorias na página. 
+    Link da página original: https://nicepage.com/sf/75480/car-repair-website-builder-software
 */
 
 * {
